完成第3章的内容，进入第4章关于视图技术的学习

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.servlet.multipart.location=
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.resolve-lazily=false
+## Freemarker 配置
+## 文件配置路径
+#spring.freemarker.template-loader-path=classpath:/templates/freeMarker
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+##Beetl配置
+##取消模板自动检测，设置为false
+beetl-beetlsql.dev=true
