--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-<!-- 		<version>1.4.7.RELEASE</version> -->
+		<!-- <version>1.4.7.RELEASE</version> -->
 		<version>2.0.0.RELEASE</version>
-		
-		<relativePath/> <!-- lookup parent from repository -->
+
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -37,6 +37,11 @@
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl-framework-starter</artifactId>
 			<version>1.1.15.RELEASE</version>
+		</dependency>
+		<!--freemarker技术(spring boot自带) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -58,7 +63,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-	<!-- 使用热部署 -->
+		<!-- 事务 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<!-- 使用热部署 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
