--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.freemarker.suffix=.ftl
 ##Beetl配置
 ##取消模板自动检测，设置为false
 beetl-beetlsql.dev=true
+##数据库连接配置
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=LJL1991
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
