--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#上传文件
+##上传文件
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.location=
@@ -24,3 +24,6 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot?useUnicode=true&cha
 spring.datasource.username=root
 spring.datasource.password=LJL1991
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+##spring data jpa配置
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true 
